XbRelease notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current git (previous svn)
======================================
 o 96b237694 2023-07-07: adrian
   Integrated MQTT driver plugin
   Needs Java 1.8 (before 1.7 was enough)

 o 96b237694 2023-02-23: michele
   protected against NPE in SessionInfo 

 o 2022-09-27: marcel
   XmlScriptInterpreter supports replaceWellknownTokens for ${generateGuid} and ${currIsoTsZ}
   Replacing with setAllowRecursive(true) and multiple ${} in content

 o f7eb25915 2022-09-16: michele
   avoid loop when ptp destination not available and publisher in async (in XmlBlasterAccess) 

 o 264a64b89 2022-07-15: michele
   added support for NUMERIC types in replication.

 o abb5f94c7 2022-07-12: michele
   introduced getSpanTime in order to handle reconnect attempt differently between client and server dispatcher. needs the xmlBlaster.property
   dispatch/connection/delayInitialReconnect=true to be activated

 o 50f67ac41 2022-06-30: michele
   now re-introduced setting to NULL a column in replication: only exception if it is an SDO_GEOMETRY type

 o f8700f0a5 2022-02-28 michele
   changed behaviour of ReplicationAgent: if an exception occurs in main method then it exits.

 o 1c54d57ab 2021-11-24 marcel
   added replyTo markup support for emails

 o fcd39b077 2021-11-18 michele
   fixed getQueueEntries to return right value even when deleting entries in ReplSlave.

 o 4b72707c1 2021-11-09 michele
   added property clientSSLProtocol to SocketUrl to enforce a particular SSL protocol: it is used the same way as other 
   socket plugin properties and defaults to SSLv3 for backwards compatibility.

 o ee3e0840b 2021-06-07 marcel
   merged async-client-connection-todead to master

 o 0d6e45b34
   Bugfix: LOCAL protocol needs callback implementation
   
 o 8b3ba9770 michele
   added a property mom.initialDispatcherActive which is false per default for the ReplAgent
